core.windows/test/unit/src/org/netbeans/core/windows/persistence/data/valid/Windows/Modes/mode03.wsmode
<?xml version="1.0" encoding="UTF-8"?>

<mode version="2.0">
    <name unique="mode03" />
    <kind type="view" />
    <state type="separated" />
    <bounds x="0" y="0" width="400" height="200" />
    <frame state="0" />
    <active-tc id="output" />
    <empty-behavior permanent="true" />
</mode>
